# insight_gui-release

./: CHANGELOG.rst  LICENSE  README.md  TODO.md  debian.store  package.xml  patches.conf  pyproject.toml  releaser_history.json  setup.cfg  setup.py  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
insight_gui/: application.py  dummy_graph.py  dummy_img_pub.py  dummy_log_pub.py  dummy_tf_broadcaster.py  main.py  pages.py  ros2_connector.py  window.py  window.ui
insight_gui/data/: adw_accent_colors.css  com.github.julianmueller.Insight.desktop  com.github.julianmueller.Insight.gresource.xml  com.github.julianmueller.Insight.gschema.xml
insight_gui/data/ui/: content_page.ui  window.ui
insight_gui/ros2_pages/: action_goal_page.py  action_info_page.py  action_list_page.py  doctor_page.py  graph_page.py  img_viewer_page.py  interface_browser_page.py  interface_definition_page.py  interface_info_page.py  joint_states_page.py  launch_info_page.py  launch_list_page.py  log_page.py  multicast_page.py  node_info_page.py  node_list_page.py  overview_page.py  param_edit_page.py  param_list_page.py  pkg_info_page.py  pkg_list_page.py  pkg_new_dialog.py  preferences_dialog.py  service_call_page.py  service_info_page.py  service_list_page.py  teleop_page.py  tf_page.py  tf_static_broadcaster_page.py  tf_tree_page.py  topic_info_page.py  topic_list_page.py  topic_pub_page.py  topic_sub_page.py  welcome_page.py
insight_gui/utils/: adw_colors.py  constants.py  gtk_utils.py  misc.py
insight_gui/widgets/: breadcrumbs.py  buttons.py  canvas.py  canvas_blocks.py  canvas_blocks.ui  canvas_sidebar.py  content_page.py  pref_group.py  pref_page.py  pref_rows.py  stack_sidebar.py
test/: test_flake8.py  test_pep257.py
